add colmarCademy project to own site

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         Tea Cozy site: <a href="https://j-raunstrup.github.io/CodeCademy/TeaCozy/">Click me!</a>
       </p>
     </div>
+    <div>
+      <h3>Code site. ColmarCademy:</h3>
+      <p>
+        ColmarCademy site: <a href="https://j-raunstrup.github.io/CodeCademy/ColmarCademy">Click me!</a>
+      </p>
+    </div>
     <div class="githubRepos">
       <h2>My github repositories can also be viewed here: </h2>
       <h3>Github repositories: <a href="https://github.com/J-Raunstrup/J-Raunstrup.github.io">Click me!</a></h3>
