add colmarAcademy grammar correction

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       </p>
     </div>
     <div>
-      <h3>Code site. ColmarCademy:</h3>
+      <h3>Code site. ColmarAcademy:</h3>
       <p>
-        ColmarCademy site: <a href="https://j-raunstrup.github.io/CodeCademy/ColmarCademy">Click me!</a>
+        ColmarAcademy site: <a href="https://j-raunstrup.github.io/CodeCademy/ColmarAcademy">Click me!</a>
       </p>
     </div>
     <div class="githubRepos">
