update brians gar and index.html to be more pg13

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
       </p>
     </div>
     <div class="briansGarage">
-      <h3>Company site: brians garage.</h3>
+      <h3>Company site: brians garage (parody).</h3>
       <p>
         Brians garage site: <a href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer-backup-19092023/flexbox-business-site-starting">Click me!</a>
       </p>
     </div>
     <div class="briansGym">
-      <h3>Club site: brians gym.</h3>
+      <h3>Club site: brians gym (parody).</h3>
       <p>
         cheetsheet css site: <a href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer-backup-19092023/responsive-club-starting/starting">Click me!</a>
       </p>
