update main website

--- a/index.html
+++ b/index.html
@@ -1,71 +1,89 @@
-<html>
-    <head><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane_webauthn_page_script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script></head><body><h1>Hello World</h1>
-    <h2>Check out these links to see some of my projects: </h2>
-    <div class="fotomatic">
-      <h3>Camera site: Fotomatic.</h3>
-        <p>
-          Fotomatic site: <a href="https://j-raunstrup.github.io/CodeCademy/F1C1_start/">Click me!</a>
-        </p>
-    </div>
-    <div class="teaCozy">
-    <h3>Tea site: TeaCozy.</h3>
-      <p>
-        Tea Cozy site: <a href="https://j-raunstrup.github.io/CodeCademy/TeaCozy/">Click me!</a>
-      </p>
-    </div>
-    <div class="colmarAcademy">
-      <h3>Code site: ColmarAcademy.</h3>
-      <p>
-        ColmarAcademy site: <a href="https://j-raunstrup.github.io/CodeCademy/ColmarAcademy">Click me!</a>
-      </p>
-    </div>
-    <div class="grundforløbs prøve">
-      <h3>Event site: Event centrum (Earlier basic course exam for webintegrator)</h3>
-      <p>
-        Event centrum site: <a href="https://j-raunstrup.github.io/Webintegrator-grundforløbsprøve">Click me!</a>
-      </p>
-    </div>
-    <div class="excursion">
-      <h3>Little phone app test site with video</h3>
-      <p>
-        Video test site: <a href="https://j-raunstrup.github.io/CodeCademy/excursion">Click me!</a>
-      </p>
-    </div>    
-    <div class="htmlAndCssCheatsheet">
-      <h3>cheatsheet for css layout</h3>
-      <p>
-        cheetsheet css site: <a href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer-backup-19092023/html-css-cheatsheet-starting">Click me!</a>
-      </p>
-    </div>
-    <div class="websiteDesignSystem">
-      <h3>Website design system site. Showing an example of deciding on colours fonts and the basic elements of a site.</h3>
-      <p>
-        Website design system site: <a href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer-backup-19092023/website-design-system-starting/starting">Click me!</a>
-      </p>
-    </div>
-    <div class="briansGarage">
-      <h3>Company site: brians garage (parody).</h3>
-      <p>
-        Brians garage site: <a href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer-backup-19092023/flexbox-business-site-starting">Click me!</a>
-      </p>
-    </div>
-    <div class="briansGym">
-      <h3>Club site: brians gym (parody).</h3>
-      <p>
-        cheetsheet css site: <a href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer-backup-19092023/responsive-club-starting/starting">Click me!</a>
-      </p>
-    </div>
-    <div class="numberGuesserSite">
-      <h3>Number guesser site that implements javascript. I wrote the javascript from specified assignments.
-         The css and html was already completed. I made the javascript.</h3>
-      <p>
-        Number guesser site: <a href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer-backup-19092023/number-guesser-starting">Click me!</a>
-      </p>
-    </div>
-    <div class="githubRepos">
-      <h2>My github repositories can also be viewed here: </h2>
-      <h3>Github repositories: <a href="https://github.com/J-Raunstrup/J-Raunstrup.github.io">Click me!</a></h3>
-    </div>
-    <h4>Best regards. -Jens</h4>
+<!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Jens' projects site</title>
+      <link rel="stylesheet" href="resources/CSS/style.css">
+      <link rel="icon" href="https://www.freeiconspng.com/thumbs/list-icon/list-icon-32.png" type="image/x-icon">
+    </head>
+    <body>
+      <h1>My projects</h1>
+      <h2>Hello. My name is Jens. </h2>
+      <p>I have been programming for a little while</p>
+      <p>These are some of the things i have made</p>
+      <p>Click on the buttons to see some of my projects: </p>
+      <div class="projectsList">
+        <div class="fotomatic">
+          <h3>Camera site: Fotomatic</h3>
+            <span><p>This can be viewed on dekstop and mobile</p></span>
+            <span><p>link: https://j-raunstrup.github.io/CodeCademy/F1C1_start/</p></span>
+            <a class="button" href="https://j-raunstrup.github.io/CodeCademy/F1C1_start/">Click to go to site!</a>
+        </div>
+        <div class="teaCozy">
+        <h3>Tea store site: TeaCozy</h3>
+          <p>This can be viewed on desktop only</p>
+          <p>Link: https://j-raunstrup.github.io/CodeCademy/TeaCozy/</p>
+          <a class="button" href="https://j-raunstrup.github.io/CodeCademy/TeaCozy/">Click to go to site!</a>
+        </div>
+        <div class="colmarAcademy">
+          <h3>Learn to code site: ColmarAcademy</h3>
+          <p>This can be viewed on desktop and mobile</p>
+          <p>Link: https://j-raunstrup.github.io/CodeCademy/ColmarAcademy </p>
+          <a class="button" href="https://j-raunstrup.github.io/CodeCademy/ColmarAcademy">Click to go to site!</a>
+        </div>
+        <div class="grundforløbs prøve">
+          <h3>Events for companies site: Event centrum</h3>
+          <p>(Earlier basic course exam for webintegrator)</p>
+          <p>This can be viewed on desktop only</p>
+          <p>Link: https://j-raunstrup.github.io/Webintegrator-grundforløbsprøve</p>
+          <a class="button" href="https://j-raunstrup.github.io/Webintegrator-grundforløbsprøve">Click to go to site!</a>
+        </div>
+        <div class="excursion">
+          <h3>Phone app annoncement site: Excursion</h3>
+          <p>This can be viewed on desktop and mobile</p>
+          <p>Link: https://j-raunstrup.github.io/CodeCademy/excursion</p>
+          <a class="button" href="https://j-raunstrup.github.io/CodeCademy/excursion">Click to go to site!</a>
+        </div>    
+        <div class="htmlAndCssCheatsheet">
+          <h3>Cheatsheet for css layout</h3>
+          <p>This can be viewed on desktop and mobile</p>
+          <p>Link: https://j-raunstrup.github.io/CodeCademy/full-stack-engineer-backup-19092023/html-css-cheatsheet-starting</p>
+          <a class="button" href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer-backup-19092023/html-css-cheatsheet-starting">Click to go to site!</a>
+        </div>
+        <div class="websiteDesignSystem">
+          <h3>Website design system site</h3>
+          <p>Showing an example of deciding on colours fonts and the basic elements of a site</p>
+          <p>This can be viewed on desktop only</p>
+          <p>Link: https://j-raunstrup.github.io/CodeCademy/full-stack-engineer-backup-19092023/website-design-system-starting/starting</p>
+          <a class="button" href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer-backup-19092023/website-design-system-starting/starting">Click to go to site!</a>
+        </div>
+        <div class="briansGarage">
+          <h3>Company site: brians garage (parody)</h3>
+            <p>This can be viewed on desktop and mobile</p>
+            <p>Link: https://j-raunstrup.github.io/CodeCademy/full-stack-engineer-backup-19092023/flexbox-business-site-starting</p>
+            <a class="button" href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer-backup-19092023/flexbox-business-site-starting">Click to go to site!</a>
+        </div>
+        <div class="briansGym">
+          <h3>Club site: brians gym (parody)</h3>
+          <p>Thsi can be viewed on desktop and mobile</p>
+          <p>Link: https://j-raunstrup.github.io/CodeCademy/full-stack-engineer-backup-19092023/responsive-club-starting/starting</p>
+          <a class="button" href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer-backup-19092023/responsive-club-starting/starting">Click to go to site!</a>
+        </div>
+        <div class="numberGuesserSite">
+          <h3>Number guesser site: (Implements a little javascript)</h3>
+            <p>I wrote the javascript from specified assignments. The css and html was already completed. I made the javascript</p>
+            <p>This can be viewed on desktop only</p>
+            <p>Link: https://j-raunstrup.github.io/CodeCademy/full-stack-engineer-backup-19092023/number-guesser-starting</p>
+            <a class="button" href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer-backup-19092023/number-guesser-starting">Click to go to site!</a>
+        </div>
+      </div>
+      <div class="githubRepos">
+        <h2>My github repositories can also be viewed here: </h2>
+        <p>Here the code behind my projects can be viewed. Its updated from time to time</p>
+        <p>Link: https://github.com/J-Raunstrup/J-Raunstrup.github.io</p>
+        <a class="button" href="https://github.com/J-Raunstrup/J-Raunstrup.github.io">Click to see my code!</a>
+      </div>
+      <h4>Best regards. -Jens</h4>
     </body>
 </html>
