--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <link rel="icon" href="https://www.freeiconspng.com/thumbs/list-icon/list-icon-32.png" type="image/x-icon">
     </head>
     <body>
+      <!-- test 2 -->
       <h1>My projects</h1>
       <h2>Hello. My name is Jens. </h2>
       <p>I have been programming for a little while</p>
