test to update main

--- a/CodeCademy/full-stack-engineer/flexbox-business-site-starting/index.html
+++ b/CodeCademy/full-stack-engineer/flexbox-business-site-starting/index.html
@@ -62,17 +62,17 @@
         <h2 id="members">Members</h2>
         <div class="members">
           <div>
-            <img src="../flexbox-business-site-starting/resources/images/46903_b_repbg.webp" alt="Mechanic with 10 years experience portrait">
+            <img src="../flexbox-business-site-starting/resources/images/200px-Brian_Nielsen.jpeg" alt="Mechanic with 10 years experience portrait">
             <p>Benny Briansen</p>
             <p>Mechanic since 2013</p>
           </div>
           <div>
-            <img src="../flexbox-business-site-starting/resources/images/gettyimages-154926631-612x612.jpg" alt="CEO and founder portrait">
+            <img src="../flexbox-business-site-starting/resources/images/attfubgoiutu589zb-450x700.jpg" alt="CEO and founder portrait">
             <p>Brian Kingsen</p>
             <p>CEO and founder since 2011. Mechanic since 2009</p>
           </div>
           <div>
-            <img src="../flexbox-business-site-starting/resources/images/mobile-mechanic-working-on-a-car-in-philadelphia.jpg" alt="New mechancic portrait">
+            <img src="../flexbox-business-site-starting/resources/images/39667-1479802683.webp" alt="New mechancic portrait">
             <p>Bobby Brian </p>
             <p>Mechanic since 2023</p>
           </div>
