add name to new main site

--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
@@ -37,7 +37,7 @@
     </header>
     <div>
         <h1>About me</h1>
-        <p>Hello. I'm a 22 year old programmer based in Copenhagen Denmark. I'm interested in learning different technologies that create value for users.</p>
+        <p>Hello my name is Jens. I'm a 22 year old programmer based in Copenhagen Denmark. I'm interested in learning different technologies that create value for users.</p>
         <p>I have made a couple of websites with HTML, CSS and javascript. I have also tried analyzing and organizing datasets with SQL and made applications in C#.</p>
         <p>I like to learn different things so i have dabbeled a little in power BI to try and visualize SQL data. I have also tried using blender a little to try out 3D modelling</p>
     </div>
