--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
@@ -57,7 +57,7 @@
         <p>English</p>
         <p>Danish</p>
         <!-- 
-                <p>German (a little)</p>
+                <p>German (a little)</p> test2.
         -->
     </div>
     <div class="programmingLanguages">
