attempt finishing template code for main page

--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
@@ -51,6 +51,21 @@
             </ul>
             <img src="./resources/images/billede af en selv sort hvid.jpeg" alt="image of me">
         </div>
+        <p>Press/click images below to go to corresponding sites</p>
+        <h4>Brians gym website</h4>
+        <div class="bigProjectDiv">
+            <a href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/responsive-club-starting/starting/"><img src="./resources/images/brianSiteImage-kopi.png" alt="brianSiteImage"></a>
+            <p><span>Description:</span> This project was an attempt to make a club site. It's also a parody so some sarcasm has been used.</p>
+            <p><span>Technologies used:</span> HTML, CSS, VS code text editor, github and github pages.</p>
+            <h4>Roulette project</h4>
+            <a href="https://github.com/J-Raunstrup/J-Raunstrup.github.io/blob/main/JakobC%23Bootcamp/repos/Roulettespil%20C%23/Roulettespil%20C%23/Program.cs"><img src="resources/images/rouletteProjectImg.png" alt=""></a>
+            <p><span>Description:</span> This project was an attempt to make a text based roulette game, where functions and built in methods were used.</p>
+            <p><span>Technologies used:</span> C# and visual studio</p>
+            <h4>SQL usage funnels</h4>
+            <a href="https://github.com/J-Raunstrup/J-Raunstrup.github.io/blob/main/CodeCademy/Analyze%20Data%20with%20SQL%20Skill%20Path/Usage%20Funnels%20With%20Warby%20Parker%20(SQL)/Usage-Funnels-With-Warby-Parker-sql.sql"><img src="./resources/images/SQLPowerPointImg.png" alt="sql powerpoint img"></a>
+            <p><span>Description:</span> This was an attempt to work thorugh a dataset and find out how effective different marketing strategies were in leading to sales and where users lost interest.</p>
+            <p><span>Technologies used:</span> SQL, VS code, text document, PowerPoint and Excel</p>
+        </div>
     </div>
     <div class="humanLanguages">
         <h3>Human languages</h3>
