try to upload first draft of new website

--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
@@ -31,9 +31,9 @@
         deadline done by december 19. max.
      -->
     <header>
-        <p class="projectsHeader">Projects</p>
-        <p class="aboutMeHeader">About me</p>
-        <p class="contactHeader">Contact</p>
+        <a href="./resources/nestedPages/projectsPage/index.html"><p class="projectsHeader">Projects</p></a>
+        <a href="./index.html"><p class="aboutMeHeader">About me</p></a>
+        <a href="./resources/nestedPages/contactPage/index.html"><p class="contactHeader">Contact</p></a>
     </header>
     <div>
         <h1>About me</h1>
@@ -62,7 +62,7 @@
             <p><span>Description:</span> This project was an attempt to make a text based roulette game, where functions and built in methods were used.</p>
             <p><span>Technologies used:</span> C# and visual studio</p>
             <h4>SQL usage funnels</h4>
-            <a href="https://github.com/J-Raunstrup/J-Raunstrup.github.io/blob/main/CodeCademy/Analyze%20Data%20with%20SQL%20Skill%20Path/Usage%20Funnels%20With%20Warby%20Parker%20(SQL)/Usage-Funnels-With-Warby-Parker-sql.sql"><img src="./resources/images/SQLPowerPointImg.png" alt="sql powerpoint img"></a>
+            <a href="https://github.com/J-Raunstrup/J-Raunstrup.github.io/blob/main/CodeCademy/Analyze%20Data%20with%20SQL%20Skill%20Path/Usage%20Funnels%20With%20Warby%20Parker%20(SQL)/Usage-Funnels-With-Warby-Parker-sql.sql" class="aTest"><img src="./resources/images/SQLPowerPointImg.png" alt="sql powerpoint img" class="imgTest"></a>
             <p><span>Description:</span> This was an attempt to work thorugh a dataset and find out how effective different marketing strategies were in leading to sales and where users lost interest.</p>
             <p><span>Technologies used:</span> SQL, VS code, text document, PowerPoint and Excel</p>
         </div>
@@ -71,7 +71,7 @@
         <h3>Human languages</h3>
         <p>English</p>
         <p>Danish</p>
-        <p>German (a little)</p> test2.
+        <p>German (a little)</p>
     </div>
     <div class="programmingLanguages">
         <h3>Programming languages</h3>
