--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="./resources/css/style.css">
+    <script src="https://kit.fontawesome.com/e5e3a9297d.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <header>
+        <a href="../projectsPage/index.html"><p class="projectsHeader">Projects</p></a>
+        <a href="../../../index.html"><p class="aboutMeHeader">About me</p></a>
+        <a href=""><p class="contactHeader">Contact</p></a>
+    </header>
     <h1>Contact</h1>
+    <p>Feel free to contact me via the options listed below.</p>
+    <h3>Email</h3>
+    <p>j.raunstrup@gmail.com</p>
+    <h3>linkdin</h3>
+    <p>Jens Raunstrup</p>
+    <a href="https://www.linkedin.com/in/jens-raunstrup-33b189254/" class="link"><p>Go to my linkedin profile</p></a>
+    <!-- image links -->
+    <a href="mailto:j.raunstrup@gmail.com" class="imgLinkC"><i class="fa-regular fa-envelope fa-3x"></i></a>
+    <a href="https://www.linkedin.com/in/jens-raunstrup-33b189254/" class=""><i class="fa-brands fa-linkedin fa-3x"></i></a>
 </body>
 </html>
