update new test site with dark mode for all sites

--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/e5e3a9297d.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./resources/javascript/script.js"></script>
 </head>
-<body>
+<body id="body">
     <!-- 
         burde vise billeder af de forskellige teknologier jeg kunne endten i starten eller slutningen. bl.a. chrome dev tools. sql, css, html, javscirpt, git, github.  command line,
         C#, maybe visual studio code. maybe a little blender. though maybe best to exclude. maybe node though i think best to exclude for now. maybe also include a little power bi on the site.
@@ -36,10 +36,10 @@
         <a href="./index.html" id="changeMe2"><p class="aboutMeHeader" id="change2">About me</p></a>
         <a href="./resources/nestedPages/contactPage/index.html" id="changeMe3"><p class="contactHeader">Contact</p></a>
     </header>
-            <div class="DMDiv">
+        <div class="DMDiv">
             <p>Dark mode</p>
             <label class="switch">
-                <input type="checkbox" onclick="toggleDarkMode()">
+                <input type="checkbox" id="darkmode" onclick="toggleDarkMode1()">
                 <span class="slider"></span>
             </label>
         </div>
