--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/index.html
@@ -13,14 +13,18 @@
         <a href="../projectsPage/index.html" id="changeMe1"><p class="projectsHeader">Projects</p></a>
         <a href="../../../index.html" id="changeMe2"><p class="aboutMeHeader">About me</p></a>
         <a href="" id="changeMe3"><p class="contactHeader" id="change3">Contact</p></a>
+        <div class="DMDiv">
+            <p>Dark mode</p>
+            <label class="switch">
+                <input type="checkbox" onclick="toggleDarkMode2()">
+                <!-- luke solution-->
+                <!-- 
+                                <input type="checkbox" id="darkmode" onclick="updateDarkMode()">
+                -->
+                <span class="slider"></span>
+            </label>
+        </div>
     </header>
-    <div class="DMDiv">
-        <p>Dark mode</p>
-        <label class="switch">
-            <input type="checkbox" onclick="toggleDarkMode2()">
-            <span class="slider"></span>
-        </label>
-    </div>
     <h1>Contact</h1>
     <p>Feel free to contact me via the options listed below.</p>
     <h3>Email</h3>
