--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/index.html
@@ -7,16 +7,20 @@
     <link rel="stylesheet" href="./resources/css/style.css">
     <script type="text/javascript" src="./resources/javascript/script.js"></script>
 </head>
-<header>
+<body>
+  <header>
     <a href="" id="changeMe1"><p class="projectsHeader" id="change1">Projects</p></a>
     <a href="../../../index.html" id="changeMe2"><p class="aboutMeHeader">About me</p></a>
     <a href="../contactPage/index.html" id="changeMe3"><p class="contactHeader">Contact</p></a>
-</header>
-<body>
+  </header>
   <div class="DMDiv">
     <p>Dark mode</p>
     <label class="switch">
         <input type="checkbox" onclick="toggleDarkMode3()">
+          <!-- luke solution-->
+            <!-- 
+                            <input type="checkbox" id="darkmode" onclick="updateDarkMode()">
+            -->
         <span class="slider"></span>
     </label>
   </div>
