try to update new pages so all have dark mode

--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/index.html
@@ -13,27 +13,27 @@
         <a href="../projectsPage/index.html" id="changeMe1"><p class="projectsHeader">Projects</p></a>
         <a href="../../../index.html" id="changeMe2"><p class="aboutMeHeader">About me</p></a>
         <a href="" id="changeMe3"><p class="contactHeader" id="change3">Contact</p></a>
-        <div class="DMDiv">
-            <p>Dark mode</p>
-            <label class="switch">
-                <input type="checkbox" onclick="toggleDarkMode2()">
-                <!-- luke solution-->
-                <!-- 
-                                <input type="checkbox" id="darkmode" onclick="updateDarkMode()">
-                -->
-                <span class="slider"></span>
-            </label>
-        </div>
     </header>
+    <div class="DMDiv">
+        <p>Dark mode</p>
+        <label class="switch">
+            <input type="checkbox" onclick="toggleDarkMode2()">
+            <!-- luke solution-->
+            <!-- 
+                            <input type="checkbox" id="darkmode" onclick="updateDarkMode()">
+            -->
+            <span class="slider"></span>
+        </label>
+    </div>
     <h1>Contact</h1>
     <p>Feel free to contact me via the options listed below.</p>
     <h3>Email</h3>
     <p>j.raunstrup@gmail.com</p>
     <h3>linkdin</h3>
     <p>Jens Raunstrup</p>
-    <a href="https://www.linkedin.com/in/jens-raunstrup-33b189254/" class="link"><p>Go to my linkedin profile</p></a>
+    <a href="https://www.linkedin.com/in/jens-raunstrup-33b189254/" class="link" id="cLink"><p>Go to my linkedin profile</p></a>
     <!-- image links -->
-    <a href="mailto:j.raunstrup@gmail.com" class="imgLinkC"><i class="fa-regular fa-envelope fa-3x"></i></a>
-    <a href="https://www.linkedin.com/in/jens-raunstrup-33b189254/" class=""><i class="fa-brands fa-linkedin fa-3x"></i></a>
+    <a href="mailto:j.raunstrup@gmail.com" class="imgLinkC" id="emailImg"><i class="fa-regular fa-envelope fa-3x"></i></a>
+    <a href="https://www.linkedin.com/in/jens-raunstrup-33b189254/" class="" id="linkdinImg"><i class="fa-brands fa-linkedin fa-3x"></i></a>
 </body>
 </html>
