--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/index.html
@@ -19,18 +19,18 @@
         <input type="checkbox" onclick="toggleDarkMode3()">
           <!-- luke solution-->
             <!-- 
-                            <input type="checkbox" id="darkmode" onclick="updateDarkMode()">
+              <input type="checkbox" id="darkmode" onclick="updateDarkMode()">
             -->
         <span class="slider"></span>
     </label>
   </div>
     <h1>Projects</h1>
-    <p>These are some of the things i have made</p>
+    <p>These are some of the things I have made</p>
     <p>Click on the buttons to see some of my projects: </p>
     <div class="projectsList">
       <div class="fotomatic">
         <h3>Camera site: Fotomatic</h3>
-          <span><p>This can be viewed on dekstop and mobile</p></span>
+          <p>This can be viewed on dekstop and mobile</p>
           <a class="button" href="https://j-raunstrup.github.io/CodeCademy/F1C1_start/">Click to go to site!</a>
       </div>
       <div class="teaCozy">
