--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
@@ -51,7 +51,7 @@
         <h1>About me</h1>
         <p>Hello my name is Jens. I'm a 22 year old programmer based in Copenhagen Denmark. I'm interested in learning different technologies that create value for users.</p>
         <p>I have made a couple of websites with HTML, CSS and javascript. I have also tried analyzing and organizing datasets with SQL and made applications in C#.</p>
-        <p>I like to learn different things so i have dabbeled a little in power BI to try and visualize SQL data. I have also tried using blender a little to try out 3D modelling</p>
+        <p>I like to learn different things so I have dabbled a little in power BI to try and visualize SQL data. I have also tried using blender a little to try out 3D modelling</p>
     </div>
     <div>
         <h2>Bigger projects</h2>
@@ -83,7 +83,7 @@
         <h3>Human languages</h3>
         <p>English</p>
         <p>Danish</p>
-        <p>German (a little)</p>
+        <p>German (tourist level)</p>
     </div>
     <div class="programmingLanguages">
         <h3>Programming languages</h3>
@@ -93,16 +93,16 @@
                 <i class="fa-brands fa-css3-alt fa-3x"></i>
                 <i class="fa-brands fa-js fa-3x"></i>
                 <i class="fa-solid fa-database fa-3x"></i>
-                <img src="./resources/images/cSharpLogo.png" alt="c sharp logo" class="cSharpLogo">
+                <img src="./resources/images/cSharpLogo.png" alt="c sharp logo" class="cSharpLogo" id="cSharpImg">
                 <i class="fa-brands fa-github fa-3x"></i>
             </div>
             <div>
                 <i class="fa-brands fa-git fa-3x"></i>
                 <i class="fa-solid fa-terminal fa-2x"></i>
-                <img src="./resources/images/powerBi.svg.png" alt="powerBi logo" class="powerBiLogo">
-                <img src="./resources/images/blenderLogo.svg" alt="blenderLogo" class="blenderLogo">
+                <img src="./resources/images/powerBi.svg.png" alt="powerBi logo" class="powerBiLogo" id="powerBiImg">
+                <img src="./resources/images/blenderLogo.svg" alt="blenderLogo" class="blenderLogo" id="blenderImg">
                 <i class="fa-brands fa-chrome fa-2x"></i>
-                <img src="./resources/images/visualStudioCodeLogo.png" alt="vsCode logo" class="vsCodeLogo">
+                <img src="./resources/images/visualStudioCodeLogo.png" alt="vsCode logo" class="vsCodeLogo" id="vsCodeImg">
             </div>
         </div>
     </div>
