correct : in header and add DMB switch

--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/index.html
@@ -15,7 +15,7 @@
         <a href="" id="changeMe3"><p class="contactHeader" id="change3">Contact</p></a>
     </header>
     <div class="DMDiv">
-        <p>Dark mode</p>
+        <p>Dark mode:</p>
         <label class="switch">
             <input type="checkbox" onclick="toggleDarkMode2()">
             <!-- luke solution-->
