--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/index.html
@@ -14,7 +14,7 @@
     <a href="../contactPage/index.html" id="changeMe3"><p class="contactHeader">Contact</p></a>
   </header>
   <div class="DMDiv">
-    <p>Dark mode</p>
+    <p>Dark mode:</p>
     <label class="switch">
         <input type="checkbox" onclick="toggleDarkMode3()">
           <!-- luke solution-->
